--- a/.github/workflows/v8.yml
+++ b/.github/workflows/v8.yml
@@ -13,9 +13,9 @@ on:
   #   types: started
 
 env:
-  PATCH_FLAG: false
-  COMMIT: 0
-  DEPOT_UPLOAD: false
+  PATCH_FLAG: true
+  COMMIT: 37f108dbf2253617072797ef915d41e0f6cf7e8f
+  DEPOT_UPLOAD: true
   SRC_UPLOAD: true
   BINARY_UPLOAD: false
 
